--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
   "name": "wordle_clone_react",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "/wordle_clone_react/",
+  "license": "MIT",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "postcss": "^8.4.14",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +31,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
+    "@reduxjs/toolkit": "^1.8.2",
+    "autoprefixer": "^10.4.7",
+    "react-redux": "^8.0.2",
+    "reapop": "^4.0.5",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "tailwindcss": "^3.1.1"
   }
 }
